--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -25,7 +25,7 @@
 <div class="hidden">
 <div class="display">
   <div class="backdrop">
-    <h2>Weather Info</h2>
+    <h2>Travel Info</h2>
       <div class="results">
         <div class="content">
             <img id="cityimage" alt="city image">
