--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -22,7 +22,7 @@
   <input type="submit" value="submit" id="SUBMIT"></input>
   <button id="print">print</button>
 </form>
-<div class="hidden">
+<section id="result" class="hidden">
 <div class="display">
   <div class="backdrop">
     <h2>Travel Info</h2>
@@ -57,7 +57,7 @@
       </div>
   </div>
 </div>
-</div>
+</section>
 <script>
       // Check that service workers are supported
       if ("serviceWorker" in navigator) {
