--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -32,6 +32,14 @@ html {
     height: -webkit-fill-available;
 }
 
+.htmlRedefined {
+    background: rgb(190,187,249);
+    background: linear-gradient(193deg, rgba(190,187,249,1) 0%, rgba(232,232,233,1) 0%, rgba(46,46,46,1) 100%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: auto;
+}
+
 input{
 	height: 25px;
 	width: 300px;
@@ -85,9 +93,17 @@ input{
 	color: #1155cc;
 }
 
+.imageclass {
+    width: 100%;    
+}
+
+.flowtext {
+    color: blue;
+}
+
 .content {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 }
 
 .results {
