--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -9,27 +9,30 @@ h6 {
 }
 
 .inputs {
-	display: inline-flex;
+    display: inline-flex;
 }
 
 body {
-	margin: 100px;
-	text-align: center;
-	height: auto;
-	padding-top: 150px;
+    margin: 100px;
+    text-align: center;
+    height: auto;
+    padding-top: 150px;
 }
 
 .forminput{
-	margin-right: 10px;
-	align-content: center;
+    margin-right: 10px;
+    align-content: center;
 }
 
 html {
     background: rgb(190,187,249);
     background: linear-gradient(193deg, rgba(190,187,249,1) 0%, rgba(232,232,233,1) 0%, rgba(46,46,46,1) 100%);
-	background-size: cover;
-	background-repeat: no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
     height: -webkit-fill-available;
+    @media screen and (max-width: 640px) {
+    height: auto;
+  }
 }
 
 .htmlRedefined {
@@ -41,12 +44,21 @@ html {
 }
 
 input{
-	height: 25px;
-	width: 300px;
-	border-radius: 5px;
-	border-width: 1px;
-	border-color: #727372;
+    height: 25px;
+    width: 300px;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: #727372;
+    @media screen and (max-width: 640px) {
+    height: 25px;
+    width: auto;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: #727372;
+  }
 }
+
+
 
 .hidden {
   display: none;
@@ -69,7 +81,7 @@ input{
 }
 
 #SUBMIT:hover, #print:hover {
-	background-color: #727372;
+    background-color: #727372;
 }
 
 .display .backdrop {
@@ -90,7 +102,7 @@ input{
 }
 
 #temperature, #pertemperature, #user_response {
-	color: #1155cc;
+    color: #1155cc;
 }
 
 .imageclass {
@@ -102,31 +114,31 @@ input{
 }
 
 .content {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .results {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 /*for small screens*/
 @media (max-width: 500px) {
 
 .inputs {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
-	height: auto;
-	width: auto;
-	padding-top: auto;
+    height: auto;
+    width: auto;
+    padding-top: auto;
 }
 
 .display .backdrop { 
-	left: 0;
-	width: auto; 
+    left: 0;
+    width: auto; 
 }
 }
